--- a/configure.ac
+++ b/configure.ac
@@ -59,28 +59,25 @@ AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
 ],[AC_MSG_RESULT(no)
 ])
 
-AX_CHECK_PCRE2([8],
-[],
-[echo "checking for Boost.Regex because PCRE2 is not usable"]
-)
+AX_CHECK_PCRE2([8], [], [echo "recommended PCRE2 library not found: checking for Boost.Regex"])
 
 if test "x$pcre2_cv_libpcre2" != "xyes" || test "x$pcre2_cv_pcre2_h" != "xyes"; then
   AX_BOOST_REGEX
 fi
 
-AX_CHECK_ZLIB([], [echo "zlib not found: ugrep option -z is not available"])
+AX_CHECK_ZLIB([], [echo "recommended zlib not found: ugrep option -z is disabled"])
 
-AX_CHECK_BZ2LIB([], [echo "libbz2 not found: ugrep option -z won't decompress .bz and .bz2 files"])
+AX_CHECK_BZ2LIB([], [echo "recommended libbz2 not found: ugrep option -z cannot decompress .bz and .bz2 files"])
 
-AX_CHECK_LZMALIB([], [echo "liblzma not found: ugrep option -z won't decompress .lzma and .xz files"])
+AX_CHECK_LZMALIB([], [echo "recommended liblzma not found: ugrep option -z cannot decompress .lzma and .xz files"])
 
-AX_CHECK_LZ4LIB([], [echo "liblz4 not found: ugrep option -z won't decompress .lz4 files"])
+AX_CHECK_LZ4LIB([], [echo "optional liblz4 not found: install if you want ugrep -z to decompress .lz4 files"])
 
-AX_CHECK_ZSTDLIB([], [echo "libzstd not found: ugrep option -z won't decompress .zst files"])
+AX_CHECK_ZSTDLIB([], [echo "optional libzstd not found: install if you want ugrep -z to decompress .zst files"])
 
-AX_CHECK_BROTLILIB([], [echo "brotli library not found: ugrep option -z won't decompress .br files"])
+AX_CHECK_BROTLILIB([], [echo "optional brotli library not found: install if you want ugrep -z to decompress .br files"])
 
-AX_CHECK_BZIP3LIB([], [echo "libbzip3 not found: ugrep option -z won't decompress .bz3 files"])
+AX_CHECK_BZIP3LIB([], [echo "optional libbzip3 not found: install if you want ugrep -z to decompress .bz3 files"])
 
 AC_ARG_WITH(grep-path,
   [AS_HELP_STRING([--with-grep-path=GREP_PATH],
