fix linker warning -L/lib directory not found

--- a/configure.ac
+++ b/configure.ac
@@ -67,15 +67,15 @@ fi
 
 AX_CHECK_ZLIB([], [echo "recommended zlib not found: ugrep option -z is disabled"])
 
-AX_CHECK_BZ2LIB([], [echo "recommended libbz2 not found: ugrep option -z cannot decompress .bz and .bz2 files"])
+AX_CHECK_BZ2LIB([], [echo "recommended libbz2 not found: ugrep option -z cannot search .bz and .bz2 files"])
 
-AX_CHECK_LZMALIB([], [echo "recommended liblzma not found: ugrep option -z cannot decompress .lzma and .xz files"])
+AX_CHECK_LZMALIB([], [echo "recommended liblzma not found: ugrep option -z cannot search .lzma and .xz files"])
 
-AX_CHECK_LZ4LIB([], [echo "optional liblz4 not found: install if you want ugrep -z to decompress .lz4 files"])
+AX_CHECK_LZ4LIB([], [echo "optional liblz4 not found: install if you want ugrep option -z to search .lz4 files"])
 
-AX_CHECK_ZSTDLIB([], [echo "optional libzstd not found: install if you want ugrep -z to decompress .zst files"])
+AX_CHECK_ZSTDLIB([], [echo "optional libzstd not found: install if you want ugrep option -z to search .zst files"])
 
-AX_CHECK_BROTLILIB([], [echo "optional brotli library not found: install if you want ugrep -z to decompress .br files"])
+AX_CHECK_BROTLILIB([], [echo "optional brotli library not found: install if you want ugrep option -z to search .br files"])
 
 AC_ARG_WITH(bzip3,
   [AS_HELP_STRING([--with-bzip3],
@@ -86,7 +86,7 @@ if test "x$with_bzip3_library" != "x"; then
   if test "x$with_bzip3" = "xyes"; then
     unset with_bzip3
   fi
-  AX_CHECK_BZIP3LIB([], [echo "optional libbzip3 not found: install if you want ugrep -z to decompress .bz3 files"])
+  AX_CHECK_BZIP3LIB([], [echo "optional libbzip3 not found: install if you want ugrep option -z to search .bz3 files"])
 fi
 
 AC_ARG_WITH(grep-path,
