add `installers-regex` to Winget Releaser workflow

--- a/.github/workflows/winget.yml
+++ b/.github/workflows/winget.yml
@@ -11,4 +11,5 @@ jobs:
       - uses: vedantmgoyal2009/winget-releaser@v2
         with:
           identifier: Genivia.ugrep
+          installers-regex: '-windows-\w+\.zip$'
           token: ${{ secrets.WINGET_TOKEN }}
